--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+<div class="card">
+  <img src=""C:\Users\amanu\OneDrive\Desktop\pp.jfif"" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Aman</b></h4>
+    <p>Architect & Engineer</p>
+  </div>
+</div>
