--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
   <img src=""C:\Users\amanu\OneDrive\Desktop\pp.jfif"" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Aman</b></h4>
-    <p>Architect & Engineer</p>
+    <p>Engineer</p>
   </div>
 </div>
