--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 <div class="card">
   <img src=""pp.png"" alt="Avatar" style="width:100%">
   <div class="container">
