--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-<div class="card">
-  <img src=""pp.png"" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Aman</b></h4>
-    <p>Engineer</p>
-  </div>
-</div>
+{
+  box-sizing: border-box;
+}
+
+body {
+  background: #ffefea;
+  font-family: 'Lato', sans-serif;
+  min-height: 100vh;
+  margin: 0;
+}
