--- a/style.css
+++ b/style.css
@@ -10,3 +10,18 @@ body {
   min-height: 100vh;
   margin: 0;
 }
+
+.container {
+  margin: auto;
+  padding: 20px;
+}
+
+.btn {
+  cursor: pointer;
+  background-color: darksalmon;
+  border: 0;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  padding: 8px;
+}
