--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ body {
   font-size: 16px;
   padding: 8px;
 }
+.btn:focus,
+select:focus {
+  outline: 0;
+}
+
+.btn-toggle {
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
