--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   background-color: darksalmon;
   border: 0;
   border-radius: 4px;
-  color: #000000;
+  color: #ffefea;
   font-size: 16px;
   padding: 8px;
 }
